tests/ui/order-dependent-cast-inference.stderr
error[E0641]: cannot cast to a pointer of an unknown kind
  --> $DIR/order-dependent-cast-inference.rs:5:22
   |
LL |     let mut y = 0 as *const _;
   |                      ^^^^^^^^ needs more type information
   |
   = note: the type information given here is insufficient to check whether the pointer cast is valid

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0641`.
